--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=servicio-items
 server.port=8002
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Configurando con ribbon
 #servicio-productos.ribbon.listOfService=localhost:8001,localhost:9001//agregando eureka no se necesita essta configuracion
 
 #Administrar tiempos de espera
