--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<!-- <version>2.2.11.RELEASE</version> para usar ribbon-->
-		<!--<version>2.3.12.RELEASE</version> se quita esta version al usar el resilience4j-->
+		<!--<version>2.3.12.RELEASE</version> se quita esta version al usar el resilience4j y se add 2.5.3-->
 		<version>2.5.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
@@ -19,7 +19,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<!-- <spring-cloud.version>Hoxton.SR12</spring-cloud.version> se quito al eliminar la 2.3.12.RELEASE-->
-		<!-- <spring-cloud.version>Hoxton.SR9</spring-cloud.version> -->
+		<!-- <spring-cloud.version>Hoxton.SR9</spring-cloud.version> se quitan para trabajar conresilience4J 2020.0.3-->
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -66,6 +66,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
