--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #ribbon.ConnectTimeout: 3000
 #ribbon.ReadTimeout: 10000
 
+#Se agrega al momento de configurar el Resilience4j session 5 del curso
 #spring.config.import=optional:configserver:
