--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
-		<!-- <spring-cloud.version>Hoxton.SR12</spring-cloud.version> se quito al eliminar la 2.3.12.RELEASE-->
-		<!-- <spring-cloud.version>Hoxton.SR9</spring-cloud.version> se quitan para trabajar conresilience4J 2020.0.3-->
+		<!-- <spring-cloud.version>Hoxton.SR12</spring-cloud.version> se quito
+		al eliminar la 2.3.12.RELEASE-->
+		<!-- <spring-cloud.version>Hoxton.SR9</spring-cloud.version> se quitan
+		para trabajar conresilience4J 2020.0.3-->
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -49,7 +51,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-<!--<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency> -->
@@ -57,8 +59,8 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		
-		
+
+
 		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>, con version de spring boot 2.3.12.RELEASE
@@ -74,6 +76,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.formacionbdi.springboot.app.commons</groupId>
+			<artifactId>springboot-servicio-commons</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
